# connectedhomeip

./: arm-ca7-args.gn
src/platform/: BUILD.gn  device.gni
src/platform/Linux/: .#CHIPPlatformConfig.h  BLEManagerImpl.cpp  BUILD.gn  CHIPLinuxStorage.cpp  CHIPLinuxStorageIni.cpp  ConfigurationManagerImpl.cpp  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  ConnectivityUtils.cpp  DeviceInstanceInfoProviderImpl.cpp  DeviceInstanceInfoProviderImpl.h  DiagnosticDataProviderImpl.cpp  KeyValueStoreManagerImpl.cpp  PlatformManagerImpl.cpp  PosixConfig.cpp  README.md  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h
src/platform/OpenWRT/: BLEManagerImpl.h  BUILD.gn  CHIPLinuxStorage.cpp  CHIPLinuxStorage.h  CHIPLinuxStorageIni.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  ConnectivityUtils.cpp  DeviceInstanceInfoProviderImpl.cpp  DeviceInstanceInfoProviderImpl.h  DiagnosticDataProviderImpl.cpp  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  NetworkCommissioningEthernetDriver.cpp  PlatformManagerImpl.cpp  PosixConfig.cpp  README.md  SystemPlatformConfig.h  SystemTimeSupport.cpp  ThreadStackManagerImpl.cpp  args.gni
